scripts/nullness/wpi/url633772aa30_isma3l_Tp2_tgz-pJ8-ar_fiuba_tecnicas_framework_Pruebas_Casos1_MainJ8.txt
../original/url633772aa30_isma3l_Tp2_tgz-pJ8-ar_fiuba_tecnicas_framework_Pruebas_Casos1_MainJ8/src/ar/fiuba/tecnicas/framework/JTest/Assert.java:23: error: (dereference.of.nullable) $$ 1 $$ expected $$ ( 1126, 1134 ) $$ dereference of possibly-null reference expected
        if (!expected.equals(actual)) throw new AssertionError();
             ^
../original/url633772aa30_isma3l_Tp2_tgz-pJ8-ar_fiuba_tecnicas_framework_Pruebas_Casos1_MainJ8/src/ar/fiuba/tecnicas/framework/JTest/Assert.java:26: error: (dereference.of.nullable) $$ 1 $$ expected $$ ( 1297, 1305 ) $$ dereference of possibly-null reference expected
        if (!expected.equals(actual)) throw new AssertionError(message);
             ^
../original/url633772aa30_isma3l_Tp2_tgz-pJ8-ar_fiuba_tecnicas_framework_Pruebas_Casos1_MainJ8/src/ar/fiuba/tecnicas/framework/JTest/Assert.java:59: error: (argument) $$ 4 $$ arg0 $$ Matcher.matches $$ T extends @Initialized @Nullable Object $$ @Initialized @NonNull Object $$ ( 3019, 3025 ) $$ incompatible argument for parameter arg0 of Matcher.matches.
        if (!matcher.matches(actual)) throw new AssertionError(reason);
                             ^
  found   : T extends @Initialized @Nullable Object
  required: @Initialized @NonNull Object
../original/url633772aa30_isma3l_Tp2_tgz-pJ8-ar_fiuba_tecnicas_framework_Pruebas_Casos1_MainJ8/src/ar/fiuba/tecnicas/framework/JTest/Assert.java:62: error: (argument) $$ 4 $$ arg0 $$ Matcher.matches $$ T extends @Initialized @Nullable Object $$ @Initialized @NonNull Object $$ ( 3202, 3208 ) $$ incompatible argument for parameter arg0 of Matcher.matches.
        if (!matcher.matches(actual)) throw new AssertionError();
                             ^
  found   : T extends @Initialized @Nullable Object
  required: @Initialized @NonNull Object
../original/url633772aa30_isma3l_Tp2_tgz-pJ8-ar_fiuba_tecnicas_framework_Pruebas_Casos1_MainJ8/src/ar/fiuba/tecnicas/framework/JTest/TestReport.java:101: error: (dereference.of.nullable) $$ 1 $$ recognizerTags $$ ( 3408, 3422 ) $$ dereference of possibly-null reference recognizerTags
        return recognizerTags.validate(test.getTags());
               ^
../original/url633772aa30_isma3l_Tp2_tgz-pJ8-ar_fiuba_tecnicas_framework_Pruebas_Casos1_MainJ8/src/ar/fiuba/tecnicas/framework/Pruebas/Casos1/SuiteATest.java:13: error: (dereference.of.nullable) $$ 1 $$ getContext() $$ ( 324, 336 ) $$ dereference of possibly-null reference getContext()
                getContext().put("k",2);
                          ^
../original/url633772aa30_isma3l_Tp2_tgz-pJ8-ar_fiuba_tecnicas_framework_Pruebas_Casos1_MainJ8/src/ar/fiuba/tecnicas/framework/Pruebas/Casos1/SuiteATest.java:24: error: (dereference.of.nullable) $$ 1 $$ suite.getContext() $$ ( 724, 742 ) $$ dereference of possibly-null reference suite.getContext()
        Assert.assertEquals("Objects have different value", suite.getContext().get("k"), suite.getContext().get("h"));
                                                                            ^
../original/url633772aa30_isma3l_Tp2_tgz-pJ8-ar_fiuba_tecnicas_framework_Pruebas_Casos1_MainJ8/src/ar/fiuba/tecnicas/framework/Pruebas/Casos1/SuiteATest.java:27: error: (dereference.of.nullable) $$ 1 $$ suite.getContext() $$ ( 913, 931 ) $$ dereference of possibly-null reference suite.getContext()
        Assert.assertArrayEquals("Arrays have different value",(Double[])suite.getContext().get("list1"),(Double[])suite.getContext().get("list2"));
                                                                                         ^
../original/url633772aa30_isma3l_Tp2_tgz-pJ8-ar_fiuba_tecnicas_framework_Pruebas_Casos1_MainJ8/src/ar/fiuba/tecnicas/framework/Pruebas/Casos1/SuiteATest.java:30: error: (unboxing.of.nullable) $$ 1 $$ (Boolean)suite.getContext().get("trueCondition") $$ ( 1090, 1138 ) $$ unboxing a possibly-null reference (Boolean)suite.getContext().get("trueCondition")
        Assert.assertTrue("The condition is false",(Boolean)suite.getContext().get("trueCondition"));
                                                   ^
../original/url633772aa30_isma3l_Tp2_tgz-pJ8-ar_fiuba_tecnicas_framework_Pruebas_Casos1_MainJ8/src/ar/fiuba/tecnicas/framework/Pruebas/Casos1/SuiteATest.java:30: error: (dereference.of.nullable) $$ 1 $$ suite.getContext() $$ ( 1099, 1117 ) $$ dereference of possibly-null reference suite.getContext()
        Assert.assertTrue("The condition is false",(Boolean)suite.getContext().get("trueCondition"));
                                                                            ^
../original/url633772aa30_isma3l_Tp2_tgz-pJ8-ar_fiuba_tecnicas_framework_Pruebas_Casos1_MainJ8/src/ar/fiuba/tecnicas/framework/JTest/TestSuite.java:37: error: (argument) $$ 4 $$ str $$ StringBuilder constructor $$ @Initialized @MonotonicNonNull String $$ @Initialized @NonNull String $$ ( 1136, 1144 ) $$ incompatible argument for parameter str of StringBuilder constructor.
        StringBuilder sb= new StringBuilder(testname);
                                            ^
  found   : @Initialized @MonotonicNonNull String
  required: @Initialized @NonNull String
../original/url633772aa30_isma3l_Tp2_tgz-pJ8-ar_fiuba_tecnicas_framework_Pruebas_Casos1_MainJ8/src/ar/fiuba/tecnicas/framework/JTest/TestRunner.java:76: error: (dereference.of.nullable) $$ 1 $$ testCreator $$ ( 2426, 2437 ) $$ dereference of possibly-null reference testCreator
        return testCreator.getTest();
               ^
../original/url633772aa30_isma3l_Tp2_tgz-pJ8-ar_fiuba_tecnicas_framework_Pruebas_Casos1_MainJ8/src/ar/fiuba/tecnicas/framework/JTest/XmlPrinter.java:19: error: (method.invocation) $$ 3 $$ inicializar() $$ @UnderInitialization(ar.fiuba.tecnicas.framework.JTest.XmlPrinter.class) @NonNull XmlPrinter $$ @Initialized @NonNull XmlPrinter $$ ( 449, 462 ) $$ call to inicializar() not allowed on the given receiver.
        inicializar();
                   ^
  found   : @UnderInitialization(ar.fiuba.tecnicas.framework.JTest.XmlPrinter.class) @NonNull XmlPrinter
  required: @Initialized @NonNull XmlPrinter
../original/url633772aa30_isma3l_Tp2_tgz-pJ8-ar_fiuba_tecnicas_framework_Pruebas_Casos1_MainJ8/src/ar/fiuba/tecnicas/framework/JTest/XmlPrinter.java:62: error: (dereference.of.nullable) $$ 1 $$ printer $$ ( 1686, 1693 ) $$ dereference of possibly-null reference printer
        printer.println("\t\t\t\t\t\t\t\t<xs:sequence>\n\t<xs:element name=\"" + type + "\">\n" +
        ^
../original/url633772aa30_isma3l_Tp2_tgz-pJ8-ar_fiuba_tecnicas_framework_Pruebas_Casos1_MainJ8/src/ar/fiuba/tecnicas/framework/JTest/XmlPrinter.java:64: error: (dereference.of.nullable) $$ 1 $$ throwable $$ ( 1918, 1927 ) $$ dereference of possibly-null reference throwable
                "\t\t\t\t\t\t\t\t\t\t\t\t<xs:attribute name=\"" + throwable.toString() + "\" type=\"xs:string\" use=\"optional\"/>\n" +
                                                                  ^
../original/url633772aa30_isma3l_Tp2_tgz-pJ8-ar_fiuba_tecnicas_framework_Pruebas_Casos1_MainJ8/src/ar/fiuba/tecnicas/framework/JTest/XmlPrinter.java:71: error: (dereference.of.nullable) $$ 1 $$ printer $$ ( 2327, 2334 ) $$ dereference of possibly-null reference printer
        printer.println("\t\t\t\t<xs:element name=\"testcase\">\n" +
        ^
../original/url633772aa30_isma3l_Tp2_tgz-pJ8-ar_fiuba_tecnicas_framework_Pruebas_Casos1_MainJ8/src/ar/fiuba/tecnicas/framework/JTest/XmlPrinter.java:76: error: (dereference.of.nullable) $$ 1 $$ printer $$ ( 2493, 2500 ) $$ dereference of possibly-null reference printer
        printer.print("\t\t\t\t\t\t<xs:attribute name=\"" + nameCase + "\" type=\"xs:string\" use=\"required\"/>\n" +
        ^
../original/url633772aa30_isma3l_Tp2_tgz-pJ8-ar_fiuba_tecnicas_framework_Pruebas_Casos1_MainJ8/src/ar/fiuba/tecnicas/framework/JTest/XmlPrinter.java:84: error: (dereference.of.nullable) $$ 1 $$ messsage $$ ( 2879, 2887 ) $$ dereference of possibly-null reference messsage
        if(!messsage.contains(":")) {
            ^
../original/url633772aa30_isma3l_Tp2_tgz-pJ8-ar_fiuba_tecnicas_framework_Pruebas_Casos1_MainJ8/src/ar/fiuba/tecnicas/framework/JTest/XmlPrinter.java:97: error: (dereference.of.nullable) $$ 1 $$ printer $$ ( 3284, 3291 ) $$ dereference of possibly-null reference printer
        printer.print("\t\t\t<xs:attribute name=\"" + name + "\" type=\"xs:string\" use=\"optional\"/>" +
        ^
../original/url633772aa30_isma3l_Tp2_tgz-pJ8-ar_fiuba_tecnicas_framework_Pruebas_Casos1_MainJ8/src/ar/fiuba/tecnicas/framework/JTest/XmlPrinter.java:113: error: (dereference.of.nullable) $$ 1 $$ printer $$ ( 3773, 3780 ) $$ dereference of possibly-null reference printer
        printer.println("<?xml version=\"1.0\" encoding=\"ISO-8859-1\" ?>\n" +
        ^
../original/url633772aa30_isma3l_Tp2_tgz-pJ8-ar_fiuba_tecnicas_framework_Pruebas_Casos1_MainJ8/src/ar/fiuba/tecnicas/framework/JTest/XmlPrinter.java:118: error: (dereference.of.nullable) $$ 1 $$ printer $$ ( 3982, 3989 ) $$ dereference of possibly-null reference printer
        printer.print("<xs:element name=\"testsuite\"");
        ^
21 errors
